--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -167,7 +167,7 @@
                                     </button>
 
                                     <div class="text-center">
-                                        <a href="#" class="text-muted text-decoration-none">
+                                        <a href="forgot-password.html" class="text-muted text-decoration-none">
                                             Quên mật khẩu?
                                         </a>
                                     </div>
