Fix all API URLs for production

--- a/frontend/pages/admin/orders.html
+++ b/frontend/pages/admin/orders.html
@@ -323,7 +323,7 @@
         // ================================================
         // CONFIGURATION
         // ================================================
-        const API_BASE_URL_LOCAL = 'http://localhost:5000/api';
+        const API_BASE_URL = 'https://fashion-shop-api.onrender.com/api';
         let currentPage = 1;
         let allOrders = [];
         let currentOrderData = null;
