--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -335,7 +335,7 @@
         // ================================================
         // CONFIGURATION
         // ================================================
-        const API_BASE_URL = 'http://localhost:5000/api';
+        const API_BASE_URL = 'https://fashion-shop-api.onrender.com/api';
 
         // ================================================
         // TOAST NOTIFICATION
